--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                         UID: UID
                     }, function (data) {
                         var G = (data)
-                        window.location = "http://lsbehost3/Giftest/" + G + ".gif";
+                        window.location = "http://lsbehost3.d.umn.edu/Giftest/" + G + ".gif";
                     });
 
                 });   
